# algorithmic_S

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  client.py  pyproject.toml  requirements.txt  server.py  setup.py  string_search.service
.github/workflows/: ci.yml
api/: openapi.yaml
benchmarks/: search_algorithms.py
config/: config.ini  config.ini.example  string_search.service
data/: README.md  test_10000.txt  test_100000.txt  test_50000.txt  test_reread.txt
docs/: PERFORMANCE.md  TECHNICAL_DOCS.md  USER_GUIDE.md  configuration.md  deployment.md  development.md  performance.md  testing.md  troubleshooting.md
monitoring/dashboards/: grafana.json
results/: results_20250111_031344.txt  results_20250111_031826.txt  results_20250111_172751.txt  results_20250111_203809.txt
scripts/: install.sh  quickstart.sh  run_tests.sh  setup_project.py
src/: __init__.py  config.py  monitoring.py  rate_limiter.py  server.py
src/config/: __init__.py  config.py  models.py
src/monitoring/: __init__.py  alerts.py  base.py  health.py  metrics.py  server.py
src/rate_limiter/: __init__.py  limiter.py
src/search/: __init__.py  benchmark.py  matcher.py
src/security/: generate_cert.py  generate_ssl.py  ssl.py
src/ssl/: cert_gen.py  ssl_config.py
src/utils/: errors.py  logging.py  monitoring.py  telemetry.py
tests/: __init__.py  conftest.py  test_alerts.py  test_basic.py  test_benchmark.py  test_comprehensive.py  test_config.ini  test_config.py  test_edge_cases.py  test_error_handling.py  test_health.py  test_integration.py  test_load.py  test_monitoring.py  test_performance_limits.py  test_reliability.py  test_search.py  test_security.py  test_server.py  test_setup.sh  test_ssl.py  test_stress.py  test_suite.py
tests/unit/: test_server.py
tools/: benchmark.py  benchmark_reference.py  benchmark_report.txt  check_data.py  cleanup.py  comparison_report.txt  create_test_data.py  guide.py  install_service.sh  load_test.py  monitor.py  setup_data.py  setup_ssl.py  verify_content.py  verify_data.py  verify_format.py  verify_requirements.py
